--- a/src/Features/Core/Portable/xlf/FeaturesResources.ko.xlf
+++ b/src/Features/Core/Portable/xlf/FeaturesResources.ko.xlf
@@ -17,6 +17,11 @@
         <target state="translated">작업은 비워 둘 수 없습니다.</target>
         <note />
       </trans-unit>
+      <trans-unit id="Convert_anonymous_type_to_tuple">
+        <source>Convert anonymous type to tuple</source>
+        <target state="new">Convert anonymous type to tuple</target>
+        <note />
+      </trans-unit>
       <trans-unit id="generic_overload">
         <source>generic overload</source>
         <target state="translated">제네릭 오버로드</target>
