--- a/src/Compilers/Core/Portable/CodeAnalysisResources.resx
+++ b/src/Compilers/Core/Portable/CodeAnalysisResources.resx
@@ -621,7 +621,10 @@
   <data name="NotARootOperation" xml:space="preserve">
     <value>Given operation has a non-null parent.</value>
   </data>
-  <data name="OperationHasNoSemanticModel" xml:space="preserve">
+  <data name="OperationHasNullSemanticModel" xml:space="preserve">
     <value>Given operation has a null semantic model.</value>
+  </data>
+  <data name="UnsupportedRootOperationKind" xml:space="preserve">
+    <value>Unsupported root operation kind '{0}'.</value>
   </data>
 </root>
